fix исправление последних ошибок тестов постман#2